Tests/Runtime2/Error/Types/.build/catchthrow.pr
[
  {
    "name": "CatchThrow",
    "description": "Sets the variable %throwKey% to the error key from %!error.Key% (which is null per the step comment).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %throwKey% = %!error.Key%",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%throwKey%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%!error.Key%",
                "type": "object"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/CatchThrow.goal",
    "prPath": "/.build/catchthrow.pr",
    "hash": "a9d4109da4f4fdea5487a25def29160b0e3b117c4c5a4ad46277163ff63cc402",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]